BREAKING CHANGE: renaming default_loopfun -> default_loop_function, default_acqfun -> default_acqfunction, default_acqopt-> default_acqoptimizer

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,9 +27,9 @@ export(bayesopt_ego)
 export(bayesopt_mpcl)
 export(bayesopt_parego)
 export(bayesopt_smsego)
-export(default_acqfun)
-export(default_acqopt)
-export(default_loopfun)
+export(default_acqfunction)
+export(default_acqoptimizer)
+export(default_loop_function)
 export(default_result_assigner)
 export(default_surrogate)
 export(mlr_acqfunctions)
