feat: add AcqFunctionEHVI and bayesopt_multi_ego

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(acqf)
 export(acqo)
 export(bayesopt_ego)
 export(bayesopt_mpcl)
+export(bayesopt_multi_ego)
 export(bayesopt_parego)
 export(bayesopt_smsego)
 export(default_acqfunction)
