--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -96,6 +96,7 @@ Collate:
     'mlr_loop_functions.R'
     'bayesopt_ego.R'
     'bayesopt_mpcl.R'
+    'bayesopt_multi_ego.R'
     'bayesopt_parego.R'
     'bayesopt_smsego.R'
     'bibentries.R'
