--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(AcqFunction)
 export(AcqFunctionAEI)
 export(AcqFunctionCB)
 export(AcqFunctionEHVI)
+export(AcqFunctionEHVIGH)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
 export(AcqFunctionMean)
@@ -51,6 +52,7 @@ import(paradox)
 importFrom(R6,R6Class)
 importFrom(stats,dnorm)
 importFrom(stats,pnorm)
+importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(utils,bibentry)
