multi_ego -> emo, bug fixes in ehvi and ehvigh

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,8 +26,8 @@ export(TunerMbo)
 export(acqf)
 export(acqo)
 export(bayesopt_ego)
+export(bayesopt_emo)
 export(bayesopt_mpcl)
-export(bayesopt_multi_ego)
 export(bayesopt_parego)
 export(bayesopt_smsego)
 export(default_acqfunction)
