--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -98,8 +98,8 @@ Collate:
     'TunerMbo.R'
     'mlr_loop_functions.R'
     'bayesopt_ego.R'
+    'bayesopt_emo.R'
     'bayesopt_mpcl.R'
-    'bayesopt_multi_ego.R'
     'bayesopt_parego.R'
     'bayesopt_smsego.R'
     'bibentries.R'
