feat: add AcqFunctionEHVI, AcqFunctionEHVIGH and bayesopt_emo, small changes to packages field of AcqFunction

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,8 @@ S3method(print,loop_function)
 export(AcqFunction)
 export(AcqFunctionAEI)
 export(AcqFunctionCB)
+export(AcqFunctionEHVI)
+export(AcqFunctionEHVIGH)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
 export(AcqFunctionMean)
@@ -24,6 +26,7 @@ export(TunerMbo)
 export(acqf)
 export(acqo)
 export(bayesopt_ego)
+export(bayesopt_emo)
 export(bayesopt_mpcl)
 export(bayesopt_parego)
 export(bayesopt_smsego)
@@ -49,6 +52,7 @@ import(paradox)
 importFrom(R6,R6Class)
 importFrom(stats,dnorm)
 importFrom(stats,pnorm)
+importFrom(stats,quantile)
 importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(utils,bibentry)
