--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,6 +52,8 @@ Imports:
     R6 (>= 2.4.1)
 Suggests:
     DiceKriging,
+    emoa,
+    fastGHQuad,
     knitr,
     lhs,
     mlr3learners (>= 0.5.4),
@@ -76,6 +78,8 @@ Collate:
     'AcqFunction.R'
     'AcqFunctionAEI.R'
     'AcqFunctionCB.R'
+    'AcqFunctionEHVI.R'
+    'AcqFunctionEHVIGH.R'
     'AcqFunctionEI.R'
     'AcqFunctionEIPS.R'
     'AcqFunctionMean.R'
@@ -94,6 +98,7 @@ Collate:
     'TunerMbo.R'
     'mlr_loop_functions.R'
     'bayesopt_ego.R'
+    'bayesopt_emo.R'
     'bayesopt_mpcl.R'
     'bayesopt_parego.R'
     'bayesopt_smsego.R'
