--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,6 +48,7 @@ import(mlr3)
 import(mlr3misc)
 import(mlr3tuning)
 import(paradox)
+import(spacefillr)
 importFrom(R6,R6Class)
 importFrom(stats,dnorm)
 importFrom(stats,pnorm)
