--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(AcqFunctionEI)
 export(AcqFunctionEIPS)
 export(AcqFunctionMean)
 export(AcqFunctionPI)
+export(AcqFunctionSD)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
 export(OptimizerMbo)
