feat: add default_gp and default_rf refactor: touch up some defaults

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,8 +33,10 @@ export(bayesopt_parego)
 export(bayesopt_smsego)
 export(default_acqfunction)
 export(default_acqoptimizer)
+export(default_gp)
 export(default_loop_function)
 export(default_result_assigner)
+export(default_rf)
 export(default_surrogate)
 export(mlr_acqfunctions)
 export(mlr_loop_functions)
