feat: draft SamplerMbo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(OptimizerMbo)
 export(ResultAssigner)
 export(ResultAssignerArchive)
 export(ResultAssignerSurrogate)
+export(SamplerMbo)
 export(Surrogate)
 export(SurrogateLearner)
 export(SurrogateLearnerCollection)
