--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(AcqFunctionSD)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
 export(OptimizerMbo)
+export(PipeOpScaleInput)
 export(ResultAssigner)
 export(ResultAssignerArchive)
 export(ResultAssignerSurrogate)
@@ -49,6 +50,7 @@ import(data.table)
 import(lgr)
 import(mlr3)
 import(mlr3misc)
+import(mlr3pipelines)
 import(mlr3tuning)
 import(paradox)
 import(spacefillr)
