--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(AcqFunctionPI)
 export(AcqFunctionSD)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
+export(OptimizerADBO)
 export(OptimizerMbo)
 export(ResultAssigner)
 export(ResultAssignerArchive)
@@ -23,6 +24,7 @@ export(ResultAssignerSurrogate)
 export(Surrogate)
 export(SurrogateLearner)
 export(SurrogateLearnerCollection)
+export(TunerADBO)
 export(TunerMbo)
 export(acqf)
 export(acqo)
