--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -72,7 +72,7 @@ Config/testthat/edition: 3
 Config/testthat/parallel: false
 NeedsCompilation: yes
 Roxygen: list(markdown = TRUE, r6 = TRUE)
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Collate:
     'mlr_acqfunctions.R'
     'AcqFunction.R'
@@ -88,6 +88,7 @@ Collate:
     'AcqFunctionSmsEgo.R'
     'AcqOptimizer.R'
     'aaa.R'
+    'OptimizerADBO.R'
     'OptimizerMbo.R'
     'mlr_result_assigners.R'
     'ResultAssigner.R'
@@ -96,6 +97,7 @@ Collate:
     'Surrogate.R'
     'SurrogateLearner.R'
     'SurrogateLearnerCollection.R'
+    'TunerADBO.R'
     'TunerMbo.R'
     'mlr_loop_functions.R'
     'bayesopt_ego.R'
