--- a/NAMESPACE
+++ b/NAMESPACE
@@ -53,6 +53,7 @@ import(mlr3)
 import(mlr3misc)
 import(mlr3tuning)
 import(paradox)
+import(rush)
 import(spacefillr)
 importFrom(R6,R6Class)
 importFrom(stats,dnorm)
