--- a/.github/workflows/dev-cmd-check.yml
+++ b/.github/workflows/dev-cmd-check.yml
@@ -27,6 +27,7 @@ jobs:
           - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/bbotk'}
           - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/mlr3'}
           - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/mlr3tuning'}
+          - {os: ubuntu-latest, r: 'release', dev-package: "mlr-org/mlr3tuning', 'mlr-org/mlr3learners', 'mlr-org/mlr3pipelines', 'mlr-org/bbotk', 'mlr-org/paradox"}
 
     steps:
       - uses: actions/checkout@v3
@@ -43,7 +44,7 @@ jobs:
           needs: check
 
       - name: Install dev versions
-        run: pak::pkg_install('${{ matrix.config.dev-package }}')
+        run: pak::pkg_install(c('${{ matrix.config.dev-package }}'))
         shell: Rscript {0}
 
       - uses: r-lib/actions/check-r-package@v2
