--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -82,14 +82,15 @@ Collate:
     'AcqFunctionEHVIGH.R'
     'AcqFunctionEI.R'
     'AcqFunctionEIPS.R'
-    'AcqFunctionLFBO.R'
+    'AcqFunctionLogEI.R'
     'AcqFunctionMean.R'
     'AcqFunctionPI.R'
     'AcqFunctionSD.R'
     'AcqFunctionSmsEgo.R'
-    'AcqFunctionTTEI.R'
     'AcqOptimizer.R'
-    'LearnerRegrLFBO.R'
+    'LearnerRegrRangerCustom.R'
+    'OptimizerChain.R'
+    'OptimizerLocalSearch.R'
     'aaa.R'
     'OptimizerMbo.R'
     'mlr_result_assigners.R'
