--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(as.data.table,DictionaryAcqFunction)
 S3method(as.data.table,DictionaryLoopFunction)
 S3method(as.data.table,DictionaryResultAssigner)
+S3method(default_values,LearnerRegrRangerCustom)
 S3method(print,loop_function)
 export(AcqFunction)
 export(AcqFunctionAEI)
@@ -11,14 +12,15 @@ export(AcqFunctionEHVI)
 export(AcqFunctionEHVIGH)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
-export(AcqFunctionLFBO)
+export(AcqFunctionLogEI)
 export(AcqFunctionMean)
 export(AcqFunctionPI)
 export(AcqFunctionSD)
 export(AcqFunctionSmsEgo)
-export(AcqFunctionTTEI)
 export(AcqOptimizer)
-export(LearnerRegrLFBO)
+export(LearnerRegrRangerCustom)
+export(OptimizerChain)
+export(OptimizerLocalSearch)
 export(OptimizerMbo)
 export(ResultAssigner)
 export(ResultAssignerArchive)
