--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ importFrom(R6,R6Class)
 importFrom(stats,dnorm)
 importFrom(stats,pnorm)
 importFrom(stats,quantile)
+importFrom(stats,rexp)
 importFrom(stats,runif)
 importFrom(stats,setNames)
 importFrom(utils,bibentry)
