feat: add ego_log and ranger mbo

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 S3method(as.data.table,DictionaryAcqFunction)
 S3method(as.data.table,DictionaryLoopFunction)
 S3method(as.data.table,DictionaryResultAssigner)
+S3method(default_values,LearnerRegrRangerMbo)
 S3method(print,loop_function)
 export(AcqFunction)
 export(AcqFunctionAEI)
@@ -16,6 +17,7 @@ export(AcqFunctionPI)
 export(AcqFunctionSD)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
+export(LearnerRegrRangerMbo)
 export(OptimizerMbo)
 export(ResultAssigner)
 export(ResultAssignerArchive)
@@ -27,6 +29,7 @@ export(TunerMbo)
 export(acqf)
 export(acqo)
 export(bayesopt_ego)
+export(bayesopt_ego_log)
 export(bayesopt_emo)
 export(bayesopt_mpcl)
 export(bayesopt_parego)
