--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -88,6 +88,7 @@ Collate:
     'AcqFunctionSmsEgo.R'
     'AcqOptimizer.R'
     'aaa.R'
+    'LearnerRegrRangerMbo.R'
     'OptimizerMbo.R'
     'mlr_result_assigners.R'
     'ResultAssigner.R'
@@ -99,6 +100,7 @@ Collate:
     'TunerMbo.R'
     'mlr_loop_functions.R'
     'bayesopt_ego.R'
+    'bayesopt_ego_log.R'
     'bayesopt_emo.R'
     'bayesopt_mpcl.R'
     'bayesopt_parego.R'
