--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,13 +41,13 @@ BugReports: https://github.com/mlr-org/mlr3mbo/issues
 Depends:
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 1.0.0),
+    bbotk (>= 0.8.0.9000),
     checkmate (>= 2.0.0),
     data.table,
     lgr (>= 0.3.4),
     mlr3 (>= 0.14.0),
     mlr3misc (>= 0.11.0),
-    mlr3tuning (>= 1.0.0),
+    mlr3tuning (>= 0.20.0.9000),
     paradox (>= 1.0.0),
     spacefillr,
     R6 (>= 2.4.1)
@@ -66,6 +66,9 @@ Suggests:
     rpart,
     stringi,
     testthat (>= 3.0.0)
+Remotes:
+    mlr-org/mlr3tuning,
+    mlr-org/bbotk
 ByteCompile: no
 Encoding: UTF-8
 Config/testthat/edition: 3
