fix: bbotk update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 S3method(as.data.table,DictionaryAcqFunction)
 S3method(as.data.table,DictionaryLoopFunction)
 S3method(as.data.table,DictionaryResultAssigner)
-S3method(default_values,LearnerRegrRangerCustom)
+S3method(default_values,LearnerRegrRangerMbo)
 S3method(print,loop_function)
 export(AcqFunction)
 export(AcqFunctionAEI)
@@ -18,7 +18,7 @@ export(AcqFunctionPI)
 export(AcqFunctionSD)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
-export(LearnerRegrRangerCustom)
+export(LearnerRegrRangerMbo)
 export(OptimizerChain)
 export(OptimizerLocalSearch)
 export(OptimizerMbo)
