refactor: local search with new paradox

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -93,8 +93,8 @@ Collate:
     'AcqOptimizer.R'
     'aaa.R'
     'LearnerRegrRangerCustom.R'
+    'OptimizerBatchLocalSearch.R'
     'OptimizerChain.R'
-    'OptimizerLocalSearch.R'
     'OptimizerMbo.R'
     'mlr_result_assigners.R'
     'ResultAssigner.R'
