--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,8 @@ export(AcqFunctionSD)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
 export(LearnerRegrRangerMbo)
-export(OptimizerChain)
-export(OptimizerLocalSearch)
+export(OptimizerBatchChain)
+export(OptimizerBatchLocalSearch)
 export(OptimizerMbo)
 export(ResultAssigner)
 export(ResultAssignerArchive)
