--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(ResultAssignerArchive)
 export(ResultAssignerSurrogate)
 export(Surrogate)
 export(SurrogateLearner)
+export(SurrogateLearnerAsync)
 export(SurrogateLearnerCollection)
 export(TunerADBO)
 export(TunerMbo)
