feat: add AcqFunctionMulti that can wrap multiple acquisition functions resulting in a multi-objective acquisition function problem feat: adjusted AcqOptimizer to be more robust (get_best) functionality but also handle AcqFunctionMulti

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -84,6 +84,7 @@ Collate:
     'AcqFunctionEI.R'
     'AcqFunctionEIPS.R'
     'AcqFunctionMean.R'
+    'AcqFunctionMulti.R'
     'AcqFunctionPI.R'
     'AcqFunctionSD.R'
     'AcqFunctionSmsEgo.R'
