--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(AcqFunctionEHVIGH)
 export(AcqFunctionEI)
 export(AcqFunctionEIPS)
 export(AcqFunctionMean)
+export(AcqFunctionMulti)
 export(AcqFunctionPI)
 export(AcqFunctionSD)
 export(AcqFunctionSmsEgo)
@@ -25,6 +26,7 @@ export(SurrogateLearner)
 export(SurrogateLearnerCollection)
 export(TunerMbo)
 export(acqf)
+export(acqfs)
 export(acqo)
 export(bayesopt_ego)
 export(bayesopt_emo)
