tests: add tests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -91,8 +91,9 @@ Collate:
     'AcqFunctionSmsEgo.R'
     'AcqOptimizer.R'
     'aaa.R'
-    'OptimizerADBO.R'
     'OptimizerMbo.R'
+    'OptimizerAsyncMbo.R'
+    'OptimizerADBO.R'
     'mlr_result_assigners.R'
     'ResultAssigner.R'
     'ResultAssignerArchive.R'
