--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,7 +66,8 @@ Suggests:
     rpart,
     stringi,
     testthat (>= 3.0.0)
-Remotes: mlr-org/bbotk
+Remotes:
+    mlr-org/mlr3
 ByteCompile: no
 Encoding: UTF-8
 Config/testthat/edition: 3
