--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(AcqFunctionPI)
 export(AcqFunctionSD)
 export(AcqFunctionSmsEgo)
 export(AcqOptimizer)
-export(OptimizerADBO)
+export(OptimizerAsyncMbo)
 export(OptimizerMbo)
 export(ResultAssigner)
 export(ResultAssignerArchive)
@@ -26,7 +26,7 @@ export(Surrogate)
 export(SurrogateLearner)
 export(SurrogateLearnerAsync)
 export(SurrogateLearnerCollection)
-export(TunerADBO)
+export(TunerAsyncMbo)
 export(TunerMbo)
 export(acqf)
 export(acqfs)
