--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -92,9 +92,8 @@ Collate:
     'AcqFunctionSmsEgo.R'
     'AcqOptimizer.R'
     'aaa.R'
-    'OptimizerMbo.R'
     'OptimizerAsyncMbo.R'
-    'OptimizerADBO.R'
+    'OptimizerMbo.R'
     'mlr_result_assigners.R'
     'ResultAssigner.R'
     'ResultAssignerArchive.R'
@@ -103,7 +102,7 @@ Collate:
     'SurrogateLearner.R'
     'SurrogateLearnerAsync.R'
     'SurrogateLearnerCollection.R'
-    'TunerADBO.R'
+    'TunerAsyncMbo.R'
     'TunerMbo.R'
     'mlr_loop_functions.R'
     'bayesopt_ego.R'
