refactor: extract internal tuned values in instance

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -64,6 +64,8 @@ Suggests:
     rpart,
     stringi,
     testthat (>= 3.0.0)
+Remotes:
+    mlr-org/mlr3tuning@extract_internal
 ByteCompile: no
 Encoding: UTF-8
 Config/testthat/edition: 3
