--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,7 @@ BugReports: https://github.com/mlr-org/mlr3mbo/issues
 Depends:
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 1.1.1),
+    bbotk (>= 1.2.0),
     checkmate (>= 2.0.0),
     data.table,
     lgr (>= 0.3.4),
@@ -64,6 +64,8 @@ Suggests:
     rpart,
     stringi,
     testthat (>= 3.0.0)
+Remotes:
+    mlr-org/mlr3tuning@extra
 ByteCompile: no
 Encoding: UTF-8
 Config/testthat/edition: 3
