--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -87,9 +87,12 @@ Collate:
     'AcqFunctionPI.R'
     'AcqFunctionSD.R'
     'AcqFunctionSmsEgo.R'
+    'AcqFunctionStochasticCB.R'
+    'AcqFunctionStochasticEI.R'
     'AcqOptimizer.R'
     'aaa.R'
     'OptimizerAsyncMbo.R'
+    'OptimizerAsyncMboADBO.R'
     'OptimizerMbo.R'
     'mlr_result_assigners.R'
     'ResultAssigner.R'
@@ -111,6 +114,5 @@ Collate:
     'helper.R'
     'loop_function.R'
     'mbo_defaults.R'
-    'mlr_callbacks.R'
     'sugar.R'
     'zzz.R'
