--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,8 +16,11 @@ export(AcqFunctionMulti)
 export(AcqFunctionPI)
 export(AcqFunctionSD)
 export(AcqFunctionSmsEgo)
+export(AcqFunctionStochasticCB)
+export(AcqFunctionStochasticEI)
 export(AcqOptimizer)
 export(OptimizerAsyncMbo)
+export(OptimizerAsyncMboADBO)
 export(OptimizerMbo)
 export(ResultAssigner)
 export(ResultAssignerArchive)
