--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ export(SurrogateLearner)
 export(SurrogateLearnerAsync)
 export(SurrogateLearnerCollection)
 export(TunerAsyncMbo)
+export(TunerAsyncMboADBO)
 export(TunerMbo)
 export(acqf)
 export(acqfs)
