--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -103,6 +103,7 @@ Collate:
     'SurrogateLearnerAsync.R'
     'SurrogateLearnerCollection.R'
     'TunerAsyncMbo.R'
+    'TunerAsyncMboADBO.R'
     'TunerMbo.R'
     'mlr_loop_functions.R'
     'bayesopt_ego.R'
