--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,7 +20,7 @@ export(AcqFunctionStochasticCB)
 export(AcqFunctionStochasticEI)
 export(AcqOptimizer)
 export(OptimizerAsyncMbo)
-export(OptimizerAsyncMboADBO)
+export(OptimizerADBO)
 export(OptimizerMbo)
 export(ResultAssigner)
 export(ResultAssignerArchive)
@@ -30,7 +30,7 @@ export(SurrogateLearner)
 export(SurrogateLearnerAsync)
 export(SurrogateLearnerCollection)
 export(TunerAsyncMbo)
-export(TunerAsyncMboADBO)
+export(TunerADBO)
 export(TunerMbo)
 export(acqf)
 export(acqfs)
