--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,16 +39,16 @@ License: LGPL-3
 URL: https://mlr3mbo.mlr-org.com, https://github.com/mlr-org/mlr3mbo
 BugReports: https://github.com/mlr-org/mlr3mbo/issues
 Depends:
+    mlr3tuning (>= 1.1.0),
     R (>= 3.1.0)
 Imports:
     bbotk (>= 1.2.0),
     checkmate (>= 2.0.0),
     data.table,
     lgr (>= 0.3.4),
-    mlr3 (>= 0.21.0),
+    mlr3 (>= 0.21.1),
     mlr3misc (>= 0.11.0),
-    mlr3tuning (>= 1.0.2),
-    paradox (>= 1.0.0),
+    paradox (>= 1.0.1),
     spacefillr,
     R6 (>= 2.4.1)
 Suggests:
@@ -62,6 +62,8 @@ Suggests:
     ranger,
     rgenoud,
     rpart,
+    redux,
+    rush,
     stringi,
     testthat (>= 3.0.0)
 ByteCompile: no
@@ -85,8 +87,12 @@ Collate:
     'AcqFunctionPI.R'
     'AcqFunctionSD.R'
     'AcqFunctionSmsEgo.R'
+    'AcqFunctionStochasticCB.R'
+    'AcqFunctionStochasticEI.R'
     'AcqOptimizer.R'
     'aaa.R'
+    'OptimizerADBO.R'
+    'OptimizerAsyncMbo.R'
     'OptimizerMbo.R'
     'mlr_result_assigners.R'
     'ResultAssigner.R'
@@ -95,6 +101,8 @@ Collate:
     'Surrogate.R'
     'SurrogateLearner.R'
     'SurrogateLearnerCollection.R'
+    'TunerADBO.R'
+    'TunerAsyncMbo.R'
     'TunerMbo.R'
     'mlr_loop_functions.R'
     'bayesopt_ego.R'
