--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -99,6 +99,7 @@ Collate:
     'ResultAssignerArchive.R'
     'ResultAssignerSurrogate.R'
     'Surrogate.R'
+    'SurrogateGP.R'
     'SurrogateLearner.R'
     'SurrogateLearnerCollection.R'
     'TunerADBO.R'
