--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(ResultAssigner)
 export(ResultAssignerArchive)
 export(ResultAssignerSurrogate)
 export(Surrogate)
+export(SurrogateGP)
 export(SurrogateLearner)
 export(SurrogateLearnerCollection)
 export(TunerADBO)
