--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,6 +50,7 @@ export(mlr_acqfunctions)
 export(mlr_loop_functions)
 export(mlr_result_assigners)
 export(ras)
+export(redis_available)
 export(srlrn)
 import(bbotk)
 import(checkmate)
