--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -81,6 +81,7 @@ Collate:
     'AcqFunctionEHVI.R'
     'AcqFunctionEHVIGH.R'
     'AcqFunctionEI.R'
+    'AcqFunctionEILog.R'
     'AcqFunctionEIPS.R'
     'AcqFunctionMean.R'
     'AcqFunctionMulti.R'
@@ -90,10 +91,17 @@ Collate:
     'AcqFunctionStochasticCB.R'
     'AcqFunctionStochasticEI.R'
     'AcqOptimizer.R'
+    'mlr_input_trafos.R'
+    'InputTrafo.R'
+    'InputTrafoUnitcube.R'
     'aaa.R'
     'OptimizerADBO.R'
     'OptimizerAsyncMbo.R'
     'OptimizerMbo.R'
+    'mlr_output_trafos.R'
+    'OutputTrafo.R'
+    'OutputTrafoLog.R'
+    'OutputTrafoStandardize.R'
     'mlr_result_assigners.R'
     'ResultAssigner.R'
     'ResultAssignerArchive.R'
