--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,8 @@ export(AcqFunctionSmsEgo)
 export(AcqFunctionStochasticCB)
 export(AcqFunctionStochasticEI)
 export(AcqOptimizer)
+export(AcqOptimizerCmaes)
+export(AcqOptimizerDirect)
 export(InputTrafo)
 export(InputTrafoUnitcube)
 export(LearnerRegrRangerMbo)
