--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -91,6 +91,8 @@ Collate:
     'AcqFunctionStochasticCB.R'
     'AcqFunctionStochasticEI.R'
     'AcqOptimizer.R'
+    'AcqOptimizerCmaes.R'
+    'AcqOptimizerDirect.R'
     'mlr_input_trafos.R'
     'InputTrafo.R'
     'InputTrafoUnitcube.R'
