--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -96,6 +96,7 @@ Collate:
     'AcqOptimizer.R'
     'AcqOptimizerCmaes.R'
     'AcqOptimizerDirect.R'
+    'AcqOptimizerDirect2.R'
     'mlr_input_trafos.R'
     'InputTrafo.R'
     'InputTrafoUnitcube.R'
@@ -116,6 +117,7 @@ Collate:
     'SurrogateGP.R'
     'SurrogateLearner.R'
     'SurrogateLearnerCollection.R'
+    'SurrogateRF.R'
     'TunerADBO.R'
     'TunerAsyncMbo.R'
     'TunerMbo.R'
