--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(AcqFunctionStochasticEI)
 export(AcqOptimizer)
 export(AcqOptimizerCmaes)
 export(AcqOptimizerDirect)
+export(AcqOptimizerDirect2)
 export(InputTrafo)
 export(InputTrafoUnitcube)
 export(LearnerRegrRangerMbo)
@@ -41,6 +42,7 @@ export(Surrogate)
 export(SurrogateGP)
 export(SurrogateLearner)
 export(SurrogateLearnerCollection)
+export(SurrogateRF)
 export(TunerADBO)
 export(TunerAsyncMbo)
 export(TunerMbo)
