--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,6 +26,7 @@ export(AcqOptimizer)
 export(AcqOptimizerCmaes)
 export(AcqOptimizerDirect)
 export(AcqOptimizerDirect2)
+export(AcqOptimizerLbfgsb2)
 export(InputTrafo)
 export(InputTrafoUnitcube)
 export(LearnerRegrRangerMbo)
