--- a/NAMESPACE
+++ b/NAMESPACE
@@ -26,7 +26,7 @@ export(AcqOptimizer)
 export(AcqOptimizerCmaes)
 export(AcqOptimizerDirect)
 export(AcqOptimizerDirect2)
-export(AcqOptimizerLbfgsb2)
+export(AcqOptimizerLbfgsb)
 export(InputTrafo)
 export(InputTrafoUnitcube)
 export(LearnerRegrRangerMbo)
