--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -96,8 +96,7 @@ Collate:
     'AcqOptimizer.R'
     'AcqOptimizerCmaes.R'
     'AcqOptimizerDirect.R'
-    'AcqOptimizerDirect2.R'
-    'AcqOptimizerLbfgsb2.R'
+    'AcqOptimizerLbfgsb.R'
     'mlr_input_trafos.R'
     'InputTrafo.R'
     'InputTrafoUnitcube.R'
