--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -93,6 +93,7 @@ Collate:
     'AcqOptimizer.R'
     'AcqOptimizerCmaes.R'
     'AcqOptimizerDirect.R'
+    'AcqOptimizerLbfgsb.R'
     'mlr_input_trafos.R'
     'InputTrafo.R'
     'InputTrafoUnitcube.R'
