--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(AcqFunctionStochasticEI)
 export(AcqOptimizer)
 export(AcqOptimizerCmaes)
 export(AcqOptimizerDirect)
+export(AcqOptimizerLbfgsb)
 export(InputTrafo)
 export(InputTrafoUnitcube)
 export(LearnerRegrRangerMbo)
