--- a/.github/workflows/dev-cmd-check.yml
+++ b/.github/workflows/dev-cmd-check.yml
@@ -36,6 +36,7 @@ jobs:
           - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/mlr3misc'}
           - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/mlr3tuning'}
           - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/paradox'}
+          - {os: ubuntu-latest, r: 'release', dev-package: 'mlr-org/mlr3pipelines'}
 
     steps:
       - uses: actions/checkout@v3
