--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,7 +68,7 @@ Suggests:
     stringi,
     testthat (>= 3.0.0),
 Remotes:
-    mlr-org/mlr3learners@ranger_se
+    mlr-org/mlr3learners@ranger_se,
     mlr-org/bbotk@ls-in-c
 ByteCompile: no
 Encoding: UTF-8
