--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(AcqOptimizerCmaes)
 export(AcqOptimizerDirect)
 export(AcqOptimizerLbfgsb)
 export(AcqOptimizerLocalSearch)
+export(AcqOptimizerRandomSearch)
 export(InputTrafo)
 export(InputTrafoUnitcube)
 export(LearnerRegrRangerMbo)
