feat: add mbo defaults

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -97,6 +97,7 @@ Collate:
     'AcqFunctionStochasticCB.R'
     'AcqFunctionStochasticEI.R'
     'AcqOptimizer.R'
+    'mlr_acqoptimizers.R'
     'AcqOptimizerCmaes.R'
     'AcqOptimizerDirect.R'
     'AcqOptimizerLbfgsb.R'
@@ -119,10 +120,8 @@ Collate:
     'ResultAssignerArchive.R'
     'ResultAssignerSurrogate.R'
     'Surrogate.R'
-    'SurrogateGP.R'
     'SurrogateLearner.R'
     'SurrogateLearnerCollection.R'
-    'SurrogateRF.R'
     'TunerADBO.R'
     'TunerAsyncMbo.R'
     'TunerMbo.R'
