feat: add mbo defaults (#192)
* push latest so_config attic

* new so_config

* fix: always add dropped columns to xdt during surrogate predict

* new so_config

* use current bbotk main branch

* LearnerRegrRangerCustom

* yahpo experiments

* fix init_design_size for random_interleave, acqopt logging and warmstart

* tweaks in acq opt and warmstart

* some more infill optimization tweaks for so config

* ..

* new ac setup

* ..

* ..

* ..

* ..

* ..

* ..

* ..

* ..

* ..

* play around with log scaling

* chore: AcqFunctionCB cleanup

* merge acqf_ttei from acqf_ttei branch for now

* ..

* prepare new so_config

* ..

* new cd version

* some so config try-outs

* mies baseline

* new eval scheme for so_config

* ..

* ..

* ..

* ..

* ..

* ..

* ..

* ..

* some changes to char to fct handling, ...

* ..

* ...

* ..

* ..

* add learner

* fix impl errors, add docs

* update

* add to dict?

* ..

* reiterate lfbo

* rerun docs

* ..

* manually require setting the lfbo direction

* ..

* ..

* ..

* ..

* ..

* ..

* fix: fix_xdt_missing for logical NA

* ..

* ..

* fix: remove reqired from parameters with default

* fix: bbotk update

* fix: optimizerchain

* update

* refactor: local search with new paradox

* fix: cols_y

* fix: remove browser()

* chore: browser

* fix: local search

* fix: minimize

* refactor: remove chain and local search

* feat: add epsilon to log ei

* ..

* feat: rework LearnerRegrRangerMbo

* ..

* fix: make log ei more robost

* se >= 1e-8 for LearnerRegrRangerMbo and law of total variance

* ..

* perf: speed up surrogate predictions

* draft SurrogateGP

* typo

* ..

* ..

* ..

* ..

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* add libcmaesr

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* ...

* fix direction

* feat: add mbo defaults

* ...

* ...

* ...

*

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,14 +39,14 @@ License: LGPL-3
 URL: https://mlr3mbo.mlr-org.com, https://github.com/mlr-org/mlr3mbo
 BugReports: https://github.com/mlr-org/mlr3mbo/issues
 Depends:
+    mlr3 (>= 1.2.0),
     mlr3tuning (>= 1.4.0),
     R (>= 3.1.0)
 Imports:
-    bbotk (>= 1.6.0),
+    bbotk (>= 1.8.0),
     checkmate (>= 2.0.0),
     data.table,
     lgr (>= 0.3.4),
-    mlr3 (>= 0.23.0),
     mlr3misc (>= 0.15.1),
     paradox (>= 1.0.1),
     spacefillr,
@@ -56,8 +56,8 @@ Suggests:
     emoa,
     fastGHQuad,
     lhs,
+    mlr3learners (>= 0.12.0),
     mirai,
-    mlr3learners (>= 0.7.0),
     mlr3pipelines (>= 0.5.2),
     nloptr,
     ranger,
@@ -66,14 +66,14 @@ Suggests:
     redux,
     rush,
     stringi,
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
 ByteCompile: no
 Encoding: UTF-8
 Config/testthat/edition: 3
 Config/testthat/parallel: false
 NeedsCompilation: yes
 Roxygen: list(markdown = TRUE, r6 = TRUE)
-RoxygenNote: 7.3.2
+RoxygenNote: 7.3.3
 Collate:
     'mlr_acqfunctions.R'
     'AcqFunction.R'
@@ -92,6 +92,11 @@ Collate:
     'AcqFunctionStochasticCB.R'
     'AcqFunctionStochasticEI.R'
     'AcqOptimizer.R'
+    'mlr_acqoptimizers.R'
+    'AcqOptimizerDirect.R'
+    'AcqOptimizerLbfgsb.R'
+    'AcqOptimizerLocalSearch.R'
+    'AcqOptimzerRandomSearch.R'
     'mlr_input_trafos.R'
     'InputTrafo.R'
     'InputTrafoUnitcube.R'
