--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(AcqFunctionSmsEgo)
 export(AcqFunctionStochasticCB)
 export(AcqFunctionStochasticEI)
 export(AcqOptimizer)
+export(AcqOptimizerCmaes)
 export(AcqOptimizerDirect)
 export(AcqOptimizerLbfgsb)
 export(AcqOptimizerLocalSearch)
