--- a/.github/workflows/no-suggest-cmd-check.yml
+++ b/.github/workflows/no-suggest-cmd-check.yml
@@ -1,6 +1,5 @@
-# r cmd check workflow without suggests of the mlr3 ecosystem v0.1.0
+# r cmd check workflow without suggests of the mlr3 ecosystem v0.3.1
 # https://github.com/mlr-org/actions
-# modified to use supercharge/redis-github-action@1.7.0
 on:
   workflow_dispatch:
     inputs:
@@ -34,7 +33,7 @@ jobs:
           - {os: ubuntu-latest,   r: 'release'}
 
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
 
       - uses: r-lib/actions/setup-pandoc@v2
 
@@ -42,15 +41,16 @@ jobs:
         with:
           r-version: ${{ matrix.config.r }}
 
-      - uses: supercharge/redis-github-action@1.7.0
-        with:
-          redis-version: 7
-
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
+          extra-packages: |
+            any::rcmdcheck
+            any::testthat
+            any::knitr
+            any::rmarkdown
           needs: check
           dependencies: '"hard"'
+          cache: false
 
       - uses: mxschmitt/action-tmate@v3
         if: ${{ github.event_name == 'workflow_dispatch' && inputs.debug_enabled }}
@@ -60,4 +60,3 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           args: 'c("--no-manual", "--as-cran")'
-          error-on: '"note"'
