--- a/.github/workflows/no-suggest-cmd-check.yml
+++ b/.github/workflows/no-suggest-cmd-check.yml
@@ -1,5 +1,6 @@
 # r cmd check workflow without suggests of the mlr3 ecosystem v0.3.1
 # https://github.com/mlr-org/actions
+# modified to use supercharge/redis-github-action@1.7.0
 on:
   workflow_dispatch:
     inputs:
@@ -40,6 +41,10 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
         with:
           r-version: ${{ matrix.config.r }}
+
+      - uses: supercharge/redis-github-action@1.7.0
+        with:
+          redis-version: 7
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
