add central mbo

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -103,6 +103,7 @@ Collate:
     'aaa.R'
     'OptimizerADBO.R'
     'OptimizerAsyncMbo.R'
+    'OptimizerAsyncMboCentral.R'
     'OptimizerMbo.R'
     'mlr_output_trafos.R'
     'OutputTrafo.R'
@@ -117,6 +118,7 @@ Collate:
     'SurrogateLearnerCollection.R'
     'TunerADBO.R'
     'TunerAsyncMbo.R'
+    'TunerAsyncMboCentral.R'
     'TunerMbo.R'
     'mlr_loop_functions.R'
     'bayesopt_ego.R'
