--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(InputTrafo)
 export(InputTrafoUnitcube)
 export(OptimizerADBO)
 export(OptimizerAsyncMbo)
+export(OptimizerAsyncMboCentral)
 export(OptimizerMbo)
 export(OutputTrafo)
 export(OutputTrafoLog)
@@ -43,6 +44,7 @@ export(SurrogateLearner)
 export(SurrogateLearnerCollection)
 export(TunerADBO)
 export(TunerAsyncMbo)
+export(TunerAsyncMboCentral)
 export(TunerMbo)
 export(acqf)
 export(acqfs)
