--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,9 @@ export(default_loop_function)
 export(default_result_assigner)
 export(default_rf)
 export(default_surrogate)
+export(error_acq_optimizer)
+export(error_random_interleave)
+export(error_surrogate_update)
 export(it)
 export(mlr_acqfunctions)
 export(mlr_acqoptimizers)
