--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -66,7 +66,9 @@ Suggests:
     redux,
     rush,
     stringi,
-    testthat (>= 3.0.0),
+    testthat (>= 3.0.0)
+Remotes:
+    mlr-org/mlr3misc@parent
 ByteCompile: no
 Encoding: UTF-8
 Config/testthat/edition: 3
