--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,7 +68,7 @@ Suggests:
     stringi,
     testthat (>= 3.0.0)
 Remotes:
-    mlr-org/mlr3misc@parent
+    mlr-org/mlr3misc
 ByteCompile: no
 Encoding: UTF-8
 Config/testthat/edition: 3
